# us-rse-submission-2024

./: environment.yml  github-rag.ipynb  qdrant-vector-database-creation.ipynb  requirements.txt
.devcontainer/us-rse-submission-2024/: devcontainer.json
resources/: pyproject.toml
resources/data/: astropy_docs.pkl
resources/src/ssec_usrse2024/: __init__.py  setup.py
