[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssec-usrse2024"
version = "2024.5.28"
description = "UW SSEC US-RSE Notebook Submission Utility Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[tool.hatch.build.targets.sdist]
exclude = [
  "*.pdf",
]